--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.4",
+    "dotenv": "^16.4.5",
+    "inquirer": "^8.2.6",
     "pg": "^8.12.0"
   }
 }
